第一次发送消息跑通，但还没有进行格式化代码
