# routers/router.go
@@ -14,16 +14,15 @@ import (
 )
 
 func init() {
-	ns := beego.NewNamespace("/v1",
+	ns := beego.NewNamespace("/monitoring",
 		beego.NSNamespace("/object",
-			beego.NSInclude(
-				&controllers.ObjectController{},
-			),
+			beego.NSInclude(&controllers.ObjectController{}),
 		),
 		beego.NSNamespace("/user",
-			beego.NSInclude(
-				&controllers.UserController{},
-			),
+			beego.NSInclude(&controllers.UserController{}),
+		),
+		beego.NSNamespace("/prometheus",
+			beego.NSInclude(&controllers.DingtalkControllers{}),
 		),
 	)
 	beego.AddNamespace(ns)
